--- a/nodeapp/package.json
+++ b/nodeapp/package.json
@@ -20,6 +20,7 @@
     "connect-mongo": "~0.4.1",
     "consolidate": "~0.10.0",
     "cookie-parser": "~1.3.2",
+    "dev-rest-proxy": "^0.2.0",
     "express": "~4.7.2",
     "express-session": "~1.7.2",
     "forever": "~0.11.0",
