--- a/nodeapp/bower.json
+++ b/nodeapp/bower.json
@@ -16,6 +16,7 @@
     "angular-ui-router": "~0.2.10",
     "socket.io-client": "~1.0.0",
     "angular-socket-io": "~0.6.0",
-    "angular-google-maps": "~1.2.1"
+    "angular-google-maps": "~1.2.1",
+    "seiyria-bootstrap-slider": "~3.1.0"
   }
 }
